# easier-softer-meeting-manager

./: .env.example  .gitignore  README.md  USER_GUIDE.md  nixpacks.toml  pyproject.toml  requirements.txt
apps/business_meeting/: admin.py  apps.py  forms.py  models.py  module.py  urls.py  views.py
apps/core/: admin.py  context_processors.py  forms.py  middleware.py  mixins.py  models.py  sanitizers.py  urls.py  validators.py  views.py
apps/meeting_format/: admin.py  apps.py  forms.py  models.py  module.py  services.py  urls.py  urls_public.py  views.py
apps/phone_list/: admin.py  apps.py  forms.py  models.py  module.py  services.py  urls.py  urls_public.py  views.py
apps/positions/: apps.py  forms.py  module.py  urls.py  views.py
apps/readings/: apps.py  forms.py  models.py  module.py  urls.py  urls_public.py  views.py
apps/registry/: apps.py  base_module.py  module_registry.py
apps/treasurer/: admin.py  apps.py  forms.py  models.py  module.py  services.py  urls.py  views.py
apps/website/: __init__.py  admin.py  apps.py  forms.py  models.py  module.py  urls.py  urls_admin.py  views.py
config/: urls.py
config/settings/: __init__.py  base.py  development.py  production.py
frontend/puck-editor/: package-lock.json  package.json  vite.config.ts
templates/: base.html
templates/business_meeting/: format_edit.html  meeting_confirm_delete.html  meeting_detail.html  meeting_form.html  meeting_list.html
templates/core/: dashboard.html  login.html  password_change.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  (+11 more)
(+151 files in other folders)
